--- a/config.h.in
+++ b/config.h.in
@@ -9,6 +9,9 @@
 /* Define if you have the ANSI C header files.  */
 #undef STDC_HEADERS
 
+/* Define if you have the closelog function.  */
+#undef HAVE_CLOSELOG
+
 /* Define if you have the dbm_close function.  */
 #undef HAVE_DBM_CLOSE
 
@@ -33,6 +36,9 @@
 /* Define if you have the malloc function.  */
 #undef HAVE_MALLOC
 
+/* Define if you have the openlog function.  */
+#undef HAVE_OPENLOG
+
 /* Define if you have the realloc function.  */
 #undef HAVE_REALLOC
 
@@ -42,14 +48,32 @@
 /* Define if you have the strerror function.  */
 #undef HAVE_STRERROR
 
+/* Define if you have the strncat function.  */
+#undef HAVE_STRNCAT
+
+/* Define if you have the strncpy function.  */
+#undef HAVE_STRNCPY
+
 /* Define if you have the strstr function.  */
 #undef HAVE_STRSTR
 
 /* Define if you have the sysinfo function.  */
 #undef HAVE_SYSINFO
 
+/* Define if you have the syslog function.  */
+#undef HAVE_SYSLOG
+
 /* Define if you have the unsetenv function.  */
 #undef HAVE_UNSETENV
+
+/* Define if you have the va_end function.  */
+#undef HAVE_VA_END
+
+/* Define if you have the va_start function.  */
+#undef HAVE_VA_START
+
+/* Define if you have the vsnprintf function.  */
+#undef HAVE_VSNPRINTF
 
 /* Define if you have the <db1/ndbm.h> header file.  */
 #undef HAVE_DB1_NDBM_H
@@ -78,6 +102,9 @@
 /* Define if you have the <shadow.h> header file.  */
 #undef HAVE_SHADOW_H
 
+/* Define if you have the <stdarg.h> header file.  */
+#undef HAVE_STDARG_H
+
 /* Define if you have the <stdio.h> header file.  */
 #undef HAVE_STDIO_H
 
@@ -95,6 +122,9 @@
 
 /* Define if you have the <sys/time.h> header file.  */
 #undef HAVE_SYS_TIME_H
+
+/* Define if you have the <syslog.h> header file.  */
+#undef HAVE_SYSLOG_H
 
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
