--- a/install.sh.in
+++ b/install.sh.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 # cgipasswd install script			staf wagemakers
-#                                               stafwag@f2s.com
-#                                               http://www.stafwag.f2s.com
+#                                               staf@digibel.org
+#                                               http://stafwag.f2g.net
 read_yesno () {
 read INPUT
   case "$INPUT" in
@@ -125,6 +125,8 @@ fi
    echo "error_locked            cgipasswd_errlocked.php" >> $CFGFILE
    echo "# run_locked            /usr/local/bin/notify_script %{name}" >> $CFGFILE
    echo "error_toolong           cgipasswd_errlong.php" >> $CFGFILE
+   echo "error_cracklib          cgipasswd_errbadpassword.php" >> $CFGFILE
+   echo "error_pam               cgipasswd_errpam.php" >> $CFGFILE
    echo "msg_success             cgipasswd_msgchanged.php" >> $CFGFILE
    echo "# run_success             \"/usr/bin/smbpasswd -s -U %{name} > /dev/null 2>&1\" 	\"%{password}\n%{password}\n\"" >> $CFGFILE
    echo >> $CFGFILE
@@ -134,6 +136,12 @@ fi
    echo >> $CFGFILE
    echo "min_length              5" >> $CFGFILE
    echo "max_length              8" >> $CFGFILE
+   echo >> $CFGFILE
+   echo "#" >> $CFGFILE
+   echo "# enabled cracklib support" >> $CFGFILE
+   echo "#" >> $CFGFILE
+   echo >> $CFGFILE
+   echo "# cracklib on" >> $CFGFILE
    echo >> $CFGFILE
    echo "</passwd>" >> $CFGFILE
    echo >> $CFGFILE
