--- a/configure.in
+++ b/configure.in
@@ -5,6 +5,17 @@ AC_SUBST(ARG)
 AC_SUBST(NEED_COMPAT_H)
 AC_SUBST(LIBOBJS)
 
+dnl Test for the system host and OS
+dnl AC_PROG_INSTALL
+dnl AC_CANONICAL_HOST
+
+AC_SUBST(host)
+AC_DEFINE_UNQUOTED(HOST,"$host")
+
+dnl AC_SUBST(host_cpu)
+dnl AC_SUBST(host_os)
+
+
 NEED_COMPAT_H="COMPAT"
 
 PRESET_CFLAGS="$CFLAGS"
@@ -24,11 +35,16 @@ AC_ARG_WITH(libcrack, [  --with-libcrack   try to use librack ])
 AC_ARG_ENABLE(md5crypt, [  --enable-md5crypt       include MD5-compatible crypt
 function (default)])
 
-dnl Checks for libraries.
+dnl freebsd support
+
+if test "$host" = "freebsd"; then
+    AC_DEFINE(FREEBSDHOST)
+    ARG="NOPAM"
+fi
 
 if test "$ARG" = "WITHPAM"; then
    AC_MSG_CHECKING(checking for PAM support...)
-   ls -l /etc/pam* > /dev/null
+   ls -l /etc/pam* > /dev/null 2>&1
    if test "$?" = "0"; then
       ENABLE_PAM="yes"
       AC_MSG_RESULT("yes");
@@ -36,31 +52,44 @@ if test "$ARG" = "WITHPAM"; then
          AC_MSG_RESULT("no");
    fi
    AC_CHECK_LIB(pam,pam_start,ARG="WITHPAM",ARG="")
-   if test "$ENABLE_PAM"="yes"; then
+if test "$ENABLE_PAM"="yes"; then
       if test "$ARG" != "WITHPAM"; then
       AC_MSG_ERROR("PAM support enabled but pam_start function not found install the pam development package and rerun configure")
       fi
    fi
 fi
 
+dnl freebsd has crypt() defined in unstd.h
+
+dnl if test "$host" != "freebsd"; then
 
 AC_CHECK_HEADERS(crypt.h,[ HAVE_CRYPT_H=1 ],AC_MSG_WARN(crypt.h not found))
 
+dnl fi
+
 if test "$ARG" != "WITHPAM"; then
    AC_MSG_WARN(***********************************************************)
-   AC_MSG_WARN(you are compiling passwd.cgi viewmailcfg.cgi mailcfg.cgi)
+   AC_MSG_WARN(you are compiling CGIpaf)
    AC_MSG_WARN(without pam support. systems without pam support are only)
    AC_MSG_WARN(supported if your system use the standard password file)
    AC_MSG_WARN(location /etc/passwd /etc/shadow and uses the crypt)
    AC_MSG_WARN(function to encrypt the passwords)
    AC_MSG_WARN(***********************************************************)
    AC_CHECK_LIB(crypt,crypt,,AC_MSG_ERROR(no pam and no crypt library found i'm giving up))
-   if test "$HAVE_CRYPT_H" != "1"; then
-      AC_MSG_ERROR(pam support is disabled and crypt.h not found)
-   fi
+
+dnl  most un*ces have crypt defined in unistd.h
+dnl   if test "$HAVE_CRYPT_H" != "1"; then
+dnl      AC_MSG_ERROR(pam support is disabled and crypt.h not found)
+dnl   fi
    LIBOBJS="$LIBOBJS pass.o salt.o"
    if test "$enable_md5crypt" != "no"; then
+
+dnl freebsd has built-in md5 support
+ 
+   if test "$host" != "freebsd"; then
       LIBOBJS="$LIBOBJS md5.o md5crypt.o"
+   fi
+
       AC_DEFINE(MD5_CRYPT)
    fi
 
@@ -161,7 +190,7 @@ AC_CHECK_HEADERS(stdarg.h,,AC_MSG_ERROR(stdarg.h not found))
 AC_CHECK_HEADERS(syslog.h,,AC_MSG_ERROR(syslog.h not found))
 
 if test "$ARG" != "WITHPAM"; then
-  AC_CHECK_HEADERS(shadow.h,,AC_MSG_ERROR(shadow.h not found))
+  AC_CHECK_HEADERS(shadow.h,,)
   ARG="NOPAM"
 else
   AC_CHECK_HEADERS(security/pam_appl.h,,AC_MSG_ERROR(pam_appl.h not found))
