Daniel R. patch merge

--- a/config.h.in
+++ b/config.h.in
@@ -139,6 +139,9 @@
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
 
+/* Define if you have the crack library (-lcrack).  */
+#undef HAVE_LIBCRACK
+
 /* Define if you have the crypt library (-lcrypt).  */
 #undef HAVE_LIBCRYPT
 
