--- a/Makefile.in
+++ b/Makefile.in
@@ -1,6 +1,6 @@
 # ----------------------------------------------------------------------
-# (GPL) 2001 Belgium                         http://stafwag.netfirms.com
-# Staf Wagemakers	                     staf.wagemakers@advalvas.be
+# (GPL) 2001 Belgium                               http://staf.patat.org
+# Staf Wagemakers	                                  staf@patat.org
 # ----------------------------------------------------------------------
 
 ARG=-D_@ARG@ -D@NEED_COMPAT_H@
