--- a/createconfig.sh.in
+++ b/createconfig.sh.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 # creates cgipaf.conf			        staf wagemakers
-#                                               staf.wagemakers@advalvas.be
-#                                               http://stafwag.netfrims.com
+#                                               staf@patat.org
+#                                               http://staf.patat.org
 
 prefix="@prefix@"
 exec_prefix="@exec_prefix@"
@@ -114,16 +114,6 @@ WWW="${datadir}"
    echo "# illegal words ( words that are not allowed in a new password" >> $CFGFILE
    echo "#" >> $CFGFILE
    echo "# illegal_words         foo bar" >> $CFGFILE 
-   echo >> $CFGFILE
-   echo "#" >> $CFGFILE
-   echo "# set PAM_CHANGE_EXPIRED_AUTHTOK flag" >> $CFGFILE
-   echo "#" >> $CFGFILE
-   echo >> $CFGFILE
-   if [ `uname` = "SunOS" ]; then
-   echo "set_PAM_CHANGE_EXPIRED_AUTHTOK  off" >> $CFGFILE
-   else
-   echo "set_PAM_CHANGE_EXPIRED_AUTHTOK  on" >> $CFGFILE
-   fi
    echo >> $CFGFILE
    echo "</passwd>" >> $CFGFILE
    echo >> $CFGFILE
