--- a/install.sh.in
+++ b/install.sh.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 # cgipaf install script			        staf wagemakers
-#                                               staf.wagemakers@advalvas.be
-#                                               http://stafwag.netfirms.com
+#                                               staf@patat.org
+#                                               http://staf.patat.org
 read_yesno () {
 read INPUT
   case "$INPUT" in
