support for linuxconf vmail added

--- a/Makefile.in
+++ b/Makefile.in
@@ -14,7 +14,7 @@ sysconfdir      = @sysconfdir@
 localstatedir   = @localstatedir@
 srcdir          = @srcdir@
 HAVE_GDBMDIR_NDBM_H   = -D@HAVE_GDBMDIR_NDBM_H@
-inc_files       = msg.h cgipaf_defs.h cgipaf_vars.h cgipaf_acl.c
+inc_files       = msg.h cgipaf_defs.h cgipaf_vars.h cgipaf_acl.c cgipaf_pwlocation.c
 CC=@CC@
 CFLAGS=@CFLAGS@
 
@@ -96,6 +96,9 @@ write_log.o: write_log.c write_log.h
 
 acl.o: acl.c acl.h 
 	$(CC) $(CFLAGS) -c acl.c
+
+fgetpwnam.o: fgetpwnam.c fgetpwnam.h
+	$(CC) $(CFLAGS) -c fgetpwnam.c
 
 clean:
 	rm -f *.cgi *.o changepass
