--- a/config.h.in
+++ b/config.h.in
@@ -11,7 +11,9 @@
 
 #undef MD5_CRYPT
 #undef HOST
+#undef BSDHOST
 #undef FREEBSDHOST
+#undef NETBSDHOST
 
 /* Define if you have the closelog function.  */
 #undef HAVE_CLOSELOG
