--- a/configure.in
+++ b/configure.in
@@ -114,7 +114,7 @@ dnl freebsd has built-in md5 support
 
    echo $host | grep -i "bsd" > /dev/null 2>&1
 
-   if test "$?"; then
+   if test "$?" = "1"; then
       LIBOBJS="$LIBOBJS fgetpwnam.o";
    else
       AC_MSG_WARN "BSD host detected vmail password are disabled"
