--- a/config.h.in
+++ b/config.h.in
@@ -164,6 +164,9 @@
 /* Define if you have the gdbm library (-lgdbm).  */
 #undef HAVE_LIBGDBM
 
+/* Define if you have the gdbm_compat library (-lgdbm_compat).  */
+#undef HAVE_LIBGDBM_COMPAT
+
 /* Define if you have the ndbm library (-lndbm).  */
 #undef HAVE_LIBNDBM
 
